--- a/ionic/themes/dark.md.scss
+++ b/ionic/themes/dark.md.scss
@@ -28,7 +28,6 @@ $toolbar-md-border-color:             $toolbar-border-color !default;
 $toolbar-md-text-color:               #fff !default;
 $toolbar-md-active-color:             $toolbar-active-color !default;
 $toolbar-md-inactive-color:           $toolbar-inactive-color !default;
-$toolbar-md-button-color:             #424242 !default;
 
 // Material Design Card
 // --------------------------------------------------
